- Mounts used in a session are now memorized, and won't be summoned again until all mounts in the same category have been used.