@@ -1,1 +1,2 @@
 - Mounts used in a session are now memorized, and won't be summoned again until all mounts in the same category have been used.
+- Fixed a bug that kept the "Configure New Character" button on screen for more than one use.
